2002-08-05  Joshua Sled  <jsled@asynchronous.org>

	* src/gnome/dialog-sxsincelast.c (add_reminders_to_gui): The SX
	nodes in the reminders tree are now not selectable, as is
	appropriate.
	(create_each_transaction_helper): Fixed a nasty problem with
	freeing a static string.
	(sxsincelast_populate): Be better about cleaning up after ourself
	during the initial instance generation.  Be better about writing
	clean, generic code.
	(processSelectedReminderList): Be better about writing clean,
	generic code.
	(to_create_prep): Empty the variable table when we transition into
	the page; closes Bug#84689.

2002-08-06  Christian Stimming  <stimming@tuhh.de>

	* src/import-export/hbci/gnc-hbci-utils.[hc]: Added hbci functions
	that are to be used from the rest of the gnucash UI.

	* src/import-export/hbci/*: More work on HBCI support (HBCI data
	is now actually stored in book's and account's kvp frames).
	
	* src/import-export/gnc-generic-import.h: Clarified docs.

	* src/engine/kvp_frame.h: Clarified doc about kvp_value_get_string
	(which is in fact non-copying.)

2002-08-05  Joshua Sled  <jsled@asynchronous.org>

	* src/gnome/dialog-sxsincelast.c (to_create_next): Fix for
	re-creating to-create transactions when the variables change;
	fixes Bug#89924.  Fixed another small bug in the variable-table
	handling code.

2002-08-05  Joshua Sled  <jsled@asynchronous.org>

	* src/import-export/gnc-generic-import.c: #if-def'd out the
	original version, and replaced with a version sans the printf.
	For some reason, with the printf, GCC 3.1 can't compile this file.

	* src/gnome/dialog-sxsincelast.c: Added support for the Back [and
	Next] button to behave correctly in the Druid.  Closes Bug#84688.
	Fixed a double-freeing bug [Bug#89475].  Correct use of
	gnc_{suspend,resume}_gui_refresh makes Transaction processing much
	faster, closing Bug#84686.

2002-08-02  Christian Stimming  <stimming@tuhh.de>

	* src/business/business-gnome/dialog-invoice.c,