@@ -1,3 +1,7 @@
+2002-08-06  David Hampton  <hampton@employees.org>
+
+	* doc/sgml/*/Makefile.am: Tweak for newer versions of db2html.
+
 2002-08-05  Joshua Sled  <jsled@asynchronous.org>
 
 	* src/gnome/dialog-sxsincelast.c (add_reminders_to_gui): The SX
